<resources>
    <string name="app_name">精品应用</string>
    <string name="mm_bottom_left">布局</string>
    <string name="mm_bottom_center">功能</string>
    <string name="mm_bottom_right">特性</string>
    <string name="more">更多</string>
    <string name="close">关闭</string>
    <string name="main_index">精品首页</string>
    <string name="lv_person_upload">下载</string>
    <string name="lv_person_mail">邮箱:</string>
    <string name="lv_person_hot">热度:</string>
    <string name="lv_person_phone">电话:</string>
    <string name="andy">Andy Rubin\nAndroid的创造者</string>
    <string name="bill">Bill Joy\nJava创造者之一</string>
    <string name="edgar">Edgar F.Co Dd\n关系数据库之父</string>
    <string name="torvalds">Linus Torvalds\nLinux之父</string>
    <string name="turing">Turing Alan\nIT的祖师爷</string>
    <string name="wbj">韦帮杰\nKeep Moving</string>
    <string name="video_describe">非常好看的视频，赞！！</string>
    <string name="file_no_exist">文件不存在</string>
    <string name="text_reset">重置</string>
    <string name="begin">开始</string>
    <string name="pause">暂停</string>
    <string name="resume">恢复</string>
    <string name="play">播放</string>
    <string name="match_eg">匹配示例</string>
    <string name="input_eg">2045989</string>
    <string name="jui_call_cpp">调用C/C++代码函数</string>
    <string name="jui_call_java_static">C/C++中调用Java的静态函数</string>
    <string name="jui_call_java_instance">C/C++中调用Java的函数</string>
    <string name="dialog_def_title">信息确认</string>
    <string name="dialog_def_content">对话框显示内容</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="text_aidl">AIDL调用</string>
    <string name="custom_data">自定义数据传输</string>
    <string name="other_app_context">获取外部应用的上下文对象</string>
    <string name="get_service_data">获取服务中的数据</string>
    <string name="open_service">开启服务</string>
    <string name="opening_service">正在打开服务\n请稍候&#8230;</string>
    <string name="service_update_ui">由服务更新的数据: %s</string>
    <string name="service_opened">服务已经开启</string>
    <string name="function">功能</string>
    <string name="view">视图</string>
    <string name="framework">框架</string>
    <string name="connect_netty">连接Netty</string>
    <string name="send_data_to_netty">向Netty发送普通数据</string>
    <string name="send_bean_data_to_netty">向Netty发送JavaBean数据</string>
    <string name="send_list_data_to_netty">向Netty发送List数据</string>
    <string name="disconnect_netty">断开连接Netty</string>
    <string name="netty_connect_successful">连接Socket服务器成功</string>
    <string name="netty_connect_fail">连接Socket服务器失败</string>
    <string name="take_video_picture">截取视频图像</string>
    <string name="capture_screen">截 屏</string>
    <string name="record_screen">录 屏</string>
    <string name="api_smaller_than_21">5.0系统以上才支持截屏功能</string>
    <string name="apply_capture_screen_fail">申请系统权限失败，并未截屏</string>
    <string name="apply_record_screen_fail">申请系统权限失败，并未录屏</string>
    <string name="capture_success">截屏成功</string>
    <string-array name="side_menu_items">
        <item>人物信息列表</item>
        <item>VideoView及屏幕旋转配置</item>
        <item>LED显示效果及倒计时</item>
        <item>银行数字/金额语音播放</item>
        <item>通过JNI技术与C/C++代码通信</item>
        <item>建立能与服务通讯的Activity</item>
        <item>AIDL与获取外部应用的上下文对象</item>
        <item>Event Bus</item>
    </string-array>
    <string-array name="frg_framework_items">
        <item>Netty</item>
        <item>ProtoBuffer</item>
        <item>Gson</item>
    </string-array>
    <string-array name="frg_function_items">
        <item>截屏</item>
        <item>录屏</item>
        <item>底部表情面板+表情飘浮动画</item>
    </string-array>
    <string-array name="frg_view_items"></string-array>
</resources>
