<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/led_aty_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_number"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="@dimen/radius_4dip"
        android:layout_marginLeft="@dimen/radius_4dip"
        android:layout_marginRight="@dimen/radius_4dip"
        android:background="@drawable/radius_bg_clickable"
        android:gravity="top|left"
        android:hint="@string/input_eg"
        android:text="@string/input_eg"
        android:padding="@dimen/radius_4dip"
        android:textColor="@color/black"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/text_match"
        style="@style/TextMarquee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_number"
        android:layout_alignLeft="@id/edit_number"
        android:textColor="@color/stroke_color"
        android:layout_marginLeft="@dimen/radius_4dip"
        android:textSize="14sp"
        android:text="@string/match_eg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_match"
        android:layout_margin="@dimen/radius_4dip"
        android:gravity="center">

        <TextView
            android:id="@+id/text_play"
            style="@style/TextWrapContent"
            android:gravity="center"
            android:text="@string/play"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>


